fixed extra space

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  max-width: 1200px;
   width: 100%;
   overflow-x: hidden;
 }
